# learn_opengl

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/lin/abcdq/openglestest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/lin/abcdq/openglestest/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/lin/abcdq/openglestest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_camera/: CMakeLists.txt  build.gradle
lib_camera/src/androidTest/java/lin/abcdq/camera/: ExampleInstrumentedTest.kt
lib_camera/src/main/: AndroidManifest.xml
lib_camera/src/main/cpp/: native_lib_camera.cpp
lib_camera/src/main/cpp/camera/: CameraSample.cpp  CameraSample.h  CameraShader.h
lib_camera/src/main/cpp/util/: GLUtils.h  Log.h
lib_camera/src/main/java/lin/abcdq/camera/: CameraJni.kt  CameraUse.kt
lib_camera/src/main/java/lin/abcdq/camera/camera/: CameraUse.kt  CameraWrap.kt  CameraWrapCall.kt  ImageUtils.kt
lib_camera/src/main/java/lin/abcdq/camera/util/: ImageUtils.kt
lib_camera/src/test/java/lin/abcdq/camera/: ExampleUnitTest.kt
